--- a/core/common/src/main/res/values/strings.xml
+++ b/core/common/src/main/res/values/strings.xml
@@ -128,4 +128,20 @@
     <string name="unfollow">Unfollow</string>
     <string name="next">Next</string>
     <string name="confirm">Confirm</string>
+
+    <!--Notifications-->
+    <string name="notify_initial_title">Starting</string>
+    <string name="notify_prepare">Preparing download...</string>
+    <string name="notify_download_image">Downloading image...</string>
+    <string name="notify_download_video">Downloading video...</string>
+    <string name="notify_download_audio">Downloading audio...</string>
+    <string name="notify_downloaded">Download complete</string>
+
+    <!--Misc-->
+    <string name="hls_warning_title">HLS video detected</string>
+    <string name="hls_warning_body">
+        Video and audio files will be downloaded separately. Use a third party tool to mux them
+        together. \n\nFor more information,
+    </string>
+    <string name="hls_warning_help_hyperlink">click here</string>
 </resources>
