--- a/core/common/src/main/res/values/strings.xml
+++ b/core/common/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="settings_blur_spoiler">Blur spoilers</string>
     <string name="settings_blur_spoiler_desc">Blurs images and video thumbnails if a post is marked as a spoiler</string>
     <string name="settings_disable_nsfw">Disable NSFW</string>
-    <string name="settings_disable_nsfw_desc">Hide NSFW posts</string>
+    <string name="settings_disable_nsfw_desc">Hide NSFW posts. Changing this setting will refresh your feed.</string>
 
     <string name="settings_data">Data</string>
     <string name="settings_export_saved_posts">Export saved posts</string>
